--- a/korsord.html
+++ b/korsord.html
@@ -103,7 +103,7 @@
 		var yy = Number(id_str[1])
 
 		
-		for(let x1 = xx; x1>=0; x1--){
+		for(var x1 = xx; x1>=0; x1--){
 			var get_id = String(x1) + "-" + String(yy);
 			var get_symbol = symbol_grid[x1][yy];
 
