--- a/korsord.html
+++ b/korsord.html
@@ -114,7 +114,7 @@
 			
 		}
 
-		for(var x2 =x1; x2<gridWidth; x2++){
+		for(var x2 =x1; x2<gridWidth-1; x2++){
 			var get_id = String(x1) + "-" + String(yy);
 			var get_symbol = symbol_grid[x2][yy];
 			if(get_symbol == 1){
