--- a/korsord.html
+++ b/korsord.html
@@ -114,15 +114,16 @@
 			
 		}
 
-		for(var x2 =x1; x2<gridWidth-2; x2++){
-			var get_id = String(x1) + "-" + String(yy);
-			var get_symbol = symbol_grid[x2][yy];
-			if(get_symbol == 1){
-				break;
-			}
-			else{
-				document.getElementById(new_id).style.backgroundColor = "blue";
-			}
+		for(var x2 = x1; x2<gridWidth-1; x2++){
+			var get_id = String(x2) + "-" + String(yy);
+			console.log(get_id);
+			//var get_symbol = symbol_grid[x2][yy];
+			//if(get_symbol == 1){
+			//	break;
+			//}
+			//else{
+			//	document.getElementById(new_id).style.backgroundColor = "blue";
+			//}
 		}
 			
 		focusedElement.style.backgroundColor = "red";
