--- a/korsord.html
+++ b/korsord.html
@@ -122,7 +122,7 @@
 				break;
 			}
 			else{
-				document.getElementById(new_id).style.backgroundColor = "blue";
+				document.getElementById(get_id).style.backgroundColor = "blue";
 			}
 		}
 			
