--- a/korsord.html
+++ b/korsord.html
@@ -126,7 +126,7 @@
 			}
 		}
 			
-		focusedElement.style.backgroundColor = "LightGrey";
+		focusedElement.style.backgroundColor = "DarkGrey";
 	    }
 		
 	    const cell_size = game_size / gridWidth;
