--- a/korsord.html
+++ b/korsord.html
@@ -164,7 +164,7 @@
 				rot = !rot;
 			}
 			else{
-	                        if (!/^[A-Za-z]$/.test(k)) {
+	                        if (!/^[A-Za-zåäöÅÄÖ]$/.test(k)) {
 	                            event.target.value = ""; // Clear non-letter input
 	                        }
 				else{
