--- a/korsord.html
+++ b/korsord.html
@@ -177,8 +177,6 @@
 		    console.log(symbol);
 			
 		    inputCell.addEventListener("input", function(event) {
-			const length = event.target.value.length;
-   			this.setSelectionRange(length, length);
 			
 			let inp_value = event.target.value;
 			var cur_letter = inp_value.slice(0,1);
@@ -227,7 +225,8 @@
                     });
 		    inputCell.addEventListener("focus", function(event){
    			
-			
+			const length = this.value.length;
+    			this.setSelectionRange(length, length);
   
 			if(this.value == "?"){
 				var id_str = this.id;
