--- a/korsord.html
+++ b/korsord.html
@@ -225,7 +225,7 @@
 		    inputCell.addEventListener("focus", function(event){
    			
 			const length = this.value.length;
-    			this.setSelectionRange(length, length);
+    			this.setSelectionRange(1, 1);
   
 			if(this.value == "?"){
 				var id_str = this.id;
