--- a/korsord.html
+++ b/korsord.html
@@ -252,7 +252,7 @@
 			
 		    });
 		    inputCell.addEventListener('click', (event) => {
-		            if (document.activeElement === input) {
+		            if (document.activeElement === inputCell) {
 		                console.log('Mouse click detected while input is focused.');
 		            }
 		        });
