--- a/korsord.html
+++ b/korsord.html
@@ -252,10 +252,8 @@
 			
 		    });
 		    inputCell.addEventListener('click', (event) => {
-		            if (document.activeElement === inputCell) {
-		                console.log('Mouse click detected while input is focused.');
-		            }
-		        });
+		           console.log("klick");
+		    });
 			
                     crosswordContainer.appendChild(inputCell);
                 }
