--- a/korsord.html
+++ b/korsord.html
@@ -252,7 +252,7 @@
 			
 		    });
 		    inputCell.addEventListener('click', (event) => {
-		           console.log("klick");
+		           this.setSelectionRange(5, 5);
 		    });
 			
                     crosswordContainer.appendChild(inputCell);
