--- a/korsord.html
+++ b/korsord.html
@@ -168,6 +168,7 @@
 		    inputCell.style.fontSize = `${cell_size-15}px`;
 		    inputCell.id = `${col}-${row}`;
                     inputCell.maxLength = 2;
+		    inputCell.type = "text";
                      var symbol = symbol_grid[col][row];
 		    if(symbol == 1){
 			inputCell.value = "?";
