--- a/korsord.html
+++ b/korsord.html
@@ -253,9 +253,24 @@
 			
 		    });
 		    inputCell.addEventListener('click', (event) => {
-		            var input = document.getElementById(this.id)
-			    input.setSelectionRange(5, 5);
-		    });
+		         var elem = document.getElementById(this.id);
+
+   			 if(elem != null) {
+			        if(elem.createTextRange) {
+			            var range = elem.createTextRange();
+			            range.move('character', caretPos);
+			            range.select();
+			        }
+			        else {
+			            if(elem.selectionStart) {
+			                elem.focus();
+			                elem.setSelectionRange(caretPos, caretPos);
+			            }
+			            else
+			                elem.focus();
+			        }
+			    }
+			});
 			
                     crosswordContainer.appendChild(inputCell);
                 }
