--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -62,7 +62,7 @@
 		question_array["Fråga 1","F2","F3","F4","F5","f6","f7","8","9","10","11","12"];
 	      
 		function update_questions(){
-			document.getElementById("question")innerHTML = question_array[cur_question];
+			document.getElementById("question").innerHTML = question_array[cur_question];
 		}
 	      
 		function next_question(){
