--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -59,7 +59,7 @@
 		cur_question = 0;
 		num_questions = 11;
 	      
-		question_array["Fråga 1","F2","F3","F4","F5","f6","f7","8","9","10","11","12"];
+		question_array = ["Fråga 1","F2","F3","F4","F5","f6","f7","8","9","10","11","12"];
 	      
 		function update_questions(){
 			document.getElementById("question").innerHTML = question_array[cur_question];
