--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -63,7 +63,7 @@
 
 		console.log(question_array);
 
-		console.log(question_array[0]);
+		console.log(question_array[cur_question]);
 	      
 		function update_questions(){
 			document.getElementById("question").innerHTML = question_array[cur_question];
