--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -99,10 +99,10 @@
 				cur_question++
 				console.log(cur_question);
 
-				a1 = document.getElementById("a1").value;
-				a2 = document.getElementById("a2").value;
-				a3 = document.getElementById("a3").value;
-				a4 = document.getElementById("a4").value;
+				a1 = document.getElementById("a1").checked;
+				a2 = document.getElementById("a2").checked;
+				a3 = document.getElementById("a3").checked;
+				a4 = document.getElementById("a4").checked;
 
 				console.log(a1,a2,a3,a4);
 				
