--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -22,7 +22,9 @@
             }
 
 		.holder{
-			
+			width: clamp(100px,95vw,600px);
+			margin: auto;
+			margin-top: 20px;
 		}
 		.question{
 			
