--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -13,7 +13,7 @@
 		
 	    body { 
 
-         background-color: white;
+         	background-color: black;
 
 	     	margin: 0px;
 		            padding: 0px;
@@ -22,18 +22,19 @@
             }
 
 		.holder{
-			width: clamp(100px,95vw,600px);
+			width: clamp(100px,95vw,400px);
 			margin: auto;
 			margin-top: 20px;
 		}
 		.question{
+			background-color: white;
 			
 		}
 		.answer{
-			
+			background-color: white;
 		}
 		.next{
-			
+			background-color: white;
 		}
 		
         </style>
