--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -79,16 +79,16 @@
 	      <p id = "question" class = "question">Fråga</p>
 	
 	      <input type = "radio" id = "a1" class = "answer" name = "quiz" value = "0">
-	      <label for="a1">Svar 1</label><br>
+	      <label class = "answer" for="a1">Svar 1</label><br>
 		
 	      <input type = "radio" id = "a2" class = "answer" name = "quiz" value = "1">
-	      <label for="a2">Svar 2</label><br>
+	      <label class = "answer" for="a2">Svar 2</label><br>
 	
 	      <input type = "radio" id = "a3" class = "answer" name = "quiz" value = "2">
-	      <label for="a3">Svar 3</label><br>
+	      <label class = "answer" for="a3">Svar 3</label><br>
 	
 	      <input type = "radio" id = "a4" class = "answer" name = "quiz" value = "3">
-	      <label for="a4">Svar 4</label><br>
+	      <label class = "answer" for="a4">Svar 4</label><br>
 	
 	      <button id = "next" class = "next" type = "button" onclick = "next_question()">Nästa</button>
 
