--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -31,8 +31,13 @@
 			
 		}
 		.answer{
+			color: black;
 			background-color: white;
 			accent-color: white;
+		}
+		.answer:checked{
+			color: white;
+			background-color: black;
 		}
 		.next{
 			background-color: white;
