--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -30,12 +30,15 @@
 			background-color: white;
 			
 		}
+		.answer_radio{
+			accent-color: white;
+		}
 		.answer{
 			color: black;
 			background-color: white;
-			accent-color: white;
+			
 		}
-		.answer:checked{
+		.answer_radio:checked + .answer{
 			color: white;
 			background-color: black;
 		}
