--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -28,7 +28,8 @@
 		}
 		.question{
 			background-color: white;
-			
+			border-radius: 10px;
+			width: 100%;
 		}
 		.answer_radio{
 			accent-color: white;
@@ -36,6 +37,8 @@
 		.answer{
 			color: black;
 			background-color: white;
+			border-radius: 10px;
+			width: 100%;
 			
 		}
 		.answer_radio:checked + .answer{
