--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -30,6 +30,7 @@
 			background-color: white;
 			border-radius: 10px;
 			width: 100%;
+			padding: 20px;
 		}
 		.answer_radio{
 			accent-color: white;
@@ -38,8 +39,7 @@
 			color: black;
 			background-color: white;
 			border-radius: 10px;
-			width: 100%;
-			
+			padding: 20px;
 		}
 		.answer_radio:checked + .answer{
 			color: white;
