--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -30,7 +30,7 @@
 			background-color: white;
 			border-radius: 10px;
 			width: 100%;
-			border: 20px;
+			padding: 10px;
 		}
 		.answer_radio{
 			accent-color: white;
@@ -39,7 +39,8 @@
 			color: black;
 			background-color: white;
 			border-radius: 10px;
-			border: 20px;
+			padding: 10px;
+			margin-top: 20px;
 		}
 		.answer_radio:checked + .answer{
 			color: white;
