--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -129,6 +129,11 @@
 			document.getElementById("la2").innerHTML = answer2_array[cur_question];
 			document.getElementById("la3").innerHTML = answer3_array[cur_question];
 			document.getElementById("la4").innerHTML = answer4_array[cur_question];
+
+			document.getElementById("a1").checked = false;
+			document.getElementById("a2").checked = false;
+			document.getElementById("a3").checked = false;
+			document.getElementById("a4").checked = false;
 		}
 
 		function end_quiz(){
