--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -31,7 +31,7 @@
 			border-radius: 10px;
 			width: 100%;
 			padding: 10px;
-			margin-down: 10px;
+			margin-bottom: 10px;
 		}
 		.answer_radio{
 			accent-color: white;
@@ -41,7 +41,7 @@
 			background-color: white;
 			border-radius: 10px;
 			padding: 10px;
-			margin-down: 40px;
+			margin-bottom: 40px;
 		}
 		.answer_radio:checked + .answer{
 			color: white;
