--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -27,6 +27,7 @@
 			margin-top: 20px;
 		}
 		.question{
+			font-family: georgia;
 			background-color: white;
 			border-radius: 10px;
 			width: 100%;
@@ -38,6 +39,7 @@
 			margin-bottom: 30px;
 		}
 		.answer{
+			font-family: georgia;
 			color: black;
 			background-color: white;
 			border-radius: 10px;
