--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -32,11 +32,12 @@
 			border-radius: 10px;
 			width: 100%;
 			padding: 10px;
-			margin-bottom: 10px;
+			margin-bottom: 20px;
 		}
 		.answer_radio{
 			accent-color: white;
 			margin-bottom: 30px;
+			width: 100%;
 		}
 		.answer{
 			font-family: georgia;
