--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -37,7 +37,7 @@
 		.answer_radio{
 			accent-color: white;
 			margin-bottom: 30px;
-			width: 100%;
+
 		}
 		.answer{
 			font-family: georgia;
@@ -45,6 +45,7 @@
 			background-color: white;
 			border-radius: 10px;
 			padding: 10px;
+			width: 100px;
 			
 		}
 		.answer_radio:checked + .answer{
