--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -45,7 +45,8 @@
 			background-color: white;
 			border-radius: 10px;
 			padding: 10px;
-			width: 100px;
+			display: inline-block;
+			width: 100%;
 			
 		}
 		.answer_radio:checked + .answer{
