--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -36,7 +36,7 @@
 		}
 		.answer_radio{
 			accent-color: white;
-			margin-bottom: 30px;
+			
 			display: none;
 
 		}
@@ -48,11 +48,15 @@
 			padding: 10px;
 			display: inline-block;
 			width: 100%;
+			margin-bottom: 20px;
+			border-color: white;
+			border: 2px;;
 			
 		}
 		.answer_radio:checked + .answer{
 			color: white;
 			background-color: black;
+			
 		}
 		.next{
 			background-color: white;
