--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -32,7 +32,7 @@
 			border-radius: 10px;
 			width: 100%;
 			padding: 10px;
-			margin-bottom: 20px;
+			margin-bottom: 15px;
 		}
 		.answer_radio{
 			accent-color: white;
@@ -48,7 +48,8 @@
 			padding: 10px;
 			display: inline-block;
 			width: 100%;
-			margin-bottom: 20px;
+			margin-bottom: 15px;
+			border-style: solid;
 			border-color: white;
 			border: 2px;;
 			
