--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -51,12 +51,15 @@
 			margin-bottom: 15px;
 			border-style: solid;
 			border-color: white;
-			border: 2px;;
+			border: 2px;
 			
 		}
 		.answer_radio:checked + .answer{
 			color: white;
 			background-color: black;
+			border-style: solid;
+			border-color: white;
+			border: 2px;
 			
 		}
 		.next{
