--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -62,7 +62,22 @@
 			
 		}
 		.next{
+			  background-color: white;
+			  border: none;
+			  color: black;
+			  padding: 15px 32px;
+			  text-align: center;
+			  text-decoration: none;
+			  display: inline-block;
+			  font-size: 16px;
+			  font-family: Atkinson-Bold;
+			border-radius: 10px;
+			margin: auto;
+		}
 
+		.next:hover{
+			color: white;
+			background-color: black;
 		}
 		
         </style>
