--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -43,12 +43,13 @@
 			font-family: georgia;
 			color: white;
 			margin-top: 15px;
+			opacity: 0;
 			
 		}
 		@keyframes tip_anim {
-		  0% {opacity: 1;}
-		  1% {opacity: 0;}
-		  100% {opacity: 1;}
+		  0% {opacity: 0;}
+		  1% {opacity: 1;}
+		  100% {opacity: 0;}
 		}
 		
 		.answer_radio{
