--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -42,8 +42,10 @@
 		.tip{
 			font-family: georgia;
 			color: white;
+			margin: auto;
 			margin-top: 15px;
 			opacity: 0;
+			
 			
 		}
 		@keyframes tip_anim {
@@ -87,7 +89,6 @@
 			  padding: 15px 32px;
 			  text-align: center;
 			  text-decoration: none;
-			  display: inline-block;
 			  font-size: 16px;
 			  font-family: Atkinson-Bold;
 			border-radius: 10px;
