--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -45,7 +45,7 @@
 			margin: auto;
 			margin-top: 15px;
 			opacity: 0;
-			
+			display: block;
 			
 		}
 		@keyframes tip_anim {
@@ -93,6 +93,7 @@
 			  font-family: Atkinson-Bold;
 			border-radius: 10px;
 			margin: auto;
+			display: block;
 		}
 
 		.next:hover{
