--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -42,10 +42,10 @@
 		.tip{
 			font-family: georgia;
 			color: white;
-			margin: auto;
+			width: 100%;
 			margin-top: 15px;
 			opacity: 0;
-			display: block;
+			text-align: center;
 			
 		}
 		@keyframes tip_anim {
