--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -203,24 +203,27 @@
 		}
 	      
 		function update_questions(){
-			
+			document.getElementById("holder_id").classList.remove('fade_in');
 			document.getElementById("holder_id").classList.add('fade_out');
 			setTimeout(() => {
-			    document.getElementById("holder_id").classList.add('fade_in');
+				document.getElementById("holder_id").classList.remove('fade_out');
+			    	document.getElementById("holder_id").classList.add('fade_in');
+
+				document.getElementById("question").innerHTML = question_array[cur_question];
+
+				document.getElementById("la1").innerHTML = answer1_array[cur_question];
+				document.getElementById("la2").innerHTML = answer2_array[cur_question];
+				document.getElementById("la3").innerHTML = answer3_array[cur_question];
+				document.getElementById("la4").innerHTML = answer4_array[cur_question];
+	
+				document.getElementById("a1").checked = false;
+				document.getElementById("a2").checked = false;
+				document.getElementById("a3").checked = false;
+				document.getElementById("a4").checked = false;
 			}, 500);
 
 			
-			document.getElementById("question").innerHTML = question_array[cur_question];
-
-			document.getElementById("la1").innerHTML = answer1_array[cur_question];
-			document.getElementById("la2").innerHTML = answer2_array[cur_question];
-			document.getElementById("la3").innerHTML = answer3_array[cur_question];
-			document.getElementById("la4").innerHTML = answer4_array[cur_question];
-
-			document.getElementById("a1").checked = false;
-			document.getElementById("a2").checked = false;
-			document.getElementById("a3").checked = false;
-			document.getElementById("a4").checked = false;
+			
 		}
 
 		function end_quiz(){
