--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -205,11 +205,9 @@
 		}
 	      
 		function update_questions(){
-			document.getElementById("holder_id").classList.remove('fade_in');
-			document.getElementById("holder_id").classList.add('fade_out');
+			document.getElementById("holder_id").style.animation = `fade_out 1s`;
 			setTimeout(() => {
-				document.getElementById("holder_id").classList.remove('fade_out');
-			    	document.getElementById("holder_id").classList.add('fade_in');
+				document.getElementById("holder_id").style.animation = `fade_in 1s`;
 
 				document.getElementById("question").innerHTML = question_array[cur_question];
 
