--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -32,15 +32,7 @@
 			display: block;
 		}
 
-		.fade_out{
-			animation-name = fade_out_anim;
-			animation-duration = 1s;
-		}
-		.fade_in{
-			animation-name = fade_in_anim;
-			animation-duration = 1s;
-		}
-		
+
 		@keyframes fade_out_anim {
 		  0% {opacity: 1;}
 		  100% {opacity: 0;}
@@ -206,9 +198,9 @@
 		}
 	      
 		function update_questions(){
-			document.getElementById("holder_id").style.animation = `fade_out 1s`;
+			document.getElementById("holder_id").style.animation = `fade_out_anim 1s`;
 			setTimeout(() => {
-				document.getElementById("holder_id").style.animation = `fade_in 1s`;
+				document.getElementById("holder_id").style.animation = `fade_in_anim 1s`;
 
 				document.getElementById("question").innerHTML = question_array[cur_question];
 
