--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -265,9 +265,17 @@
 			}
 		};
 
-	      	
-	     update_questions();
+	      	document.getElementById("question").innerHTML = question_array[cur_question];
 
+		document.getElementById("la1").innerHTML = answer1_array[cur_question];
+		document.getElementById("la2").innerHTML = answer2_array[cur_question];
+		document.getElementById("la3").innerHTML = answer3_array[cur_question];
+		document.getElementById("la4").innerHTML = answer4_array[cur_question];
+
+		document.getElementById("a1").checked = false;
+		document.getElementById("a2").checked = false;
+		document.getElementById("a3").checked = false;
+		document.getElementById("a4").checked = false;
 	        
       </script>
 	
