--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -39,8 +39,14 @@
 		}
 		@keyframes fade_in_anim {
 		  0% {opacity: 0;}
-		  100% {opacity: 100;}
+		  100% {opacity: 1;}
 		}
+		@keyframes fade_in_out_anim {
+		  0% {opacity: 1;}
+		  50% {opacity: 0;}
+		  100% {opacity: 1;}
+		}
+
 		
 		.question{
 			font-family: georgia;
@@ -198,9 +204,8 @@
 		}
 	      
 		function update_questions(){
-			document.getElementById("holder_id").style.animation = `fade_out_anim 0.3s`;
+			document.getElementById("holder_id").style.animation = `fade_in_out_anim 0.6s`;
 			setTimeout(() => {
-				document.getElementById("holder_id").style.animation = `fade_in_anim 0.3s`;
 
 				document.getElementById("question").innerHTML = question_array[cur_question];
 
