--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -204,6 +204,7 @@
 		}
 	      
 		function update_questions(){
+			document.getElementById("holder_id").style.animation = ``;
 			document.getElementById("holder_id").style.animation = `fade_in_out_anim 0.6s`;
 			setTimeout(() => {
 
