--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -186,11 +186,11 @@
 	        kole = 0;
 	        mela = 0;
 	      
-		question_array = ["Fråga 1","F2","F3","F4","F5","f6","f7","8","9","10","11","12"];
-		answer1_array = [1,1,1,1,1,1,1,1,1,1,1,1];
-	        answer2_array = [2,2,2,2,2,2,2,2,2,2,2,2];
-	        answer3_array = [3,3,3,3,3,3,3,3,3,3,3,3];
-	        answer4_array = [4,4,4,4,4,4,4,4,4,4,4,4];
+		question_array = ["Fråga 1: Du är på fest och har köat en låt (Olle Ljungström, Jag är apan), den spelas dock aldrig och du inser efter ett tag att din kompis istället köat halva Neutral Milk Hotels diskografi, vad gör du?","F2","F3","F4","F5","f6","f7","8","9","10","11","12"];
+		answer1_array = ["Du försöker dig på att breakdancea och hoppas att det går bra, musik är musik.",1,1,1,1,1,1,1,1,1,1,1];
+	        answer2_array = ["Du sitter kvar och lyssnar, sjunker långsamt ner i soffan tills du nästan är ett med den, det är inte så viktigt vad som spelas, i soffans famn är du trygg.",2,2,2,2,2,2,2,2,2,2,2];
+	        answer3_array = ["Du konfronterar din vän och förklarar att så gör man inte, han svarar: “Vadå då? Vem fan gillar ens Olle Ljungström”. Du hotar med stryk.",3,3,3,3,3,3,3,3,3,3,3];
+	        answer4_array = ["Tyngden av vad som hände tillsammans med den nostalgiska musiken blir för mycket: Du börjar böla som ett barn.",4,4,4,4,4,4,4,4,4,4,4];
 
 		function fadeOutAndRemove(el, duration = 500) {
 		  el.style.transition = `opacity ${duration}ms ease`;
