--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -46,6 +46,9 @@
 		  50% {opacity: 0;}
 		  100% {opacity: 1;}
 		}
+		@keyframes null {
+			
+		}
 
 		
 		.question{
@@ -204,7 +207,7 @@
 		}
 	      
 		function update_questions(){
-			document.getElementById("holder_id").style.animation = ``;
+			document.getElementById("holder_id").style.animation = `null 0s`;
 			document.getElementById("holder_id").style.animation = `fade_in_out_anim 0.6s`;
 			setTimeout(() => {
 
