--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -53,7 +53,10 @@
 		
 		.question{
 			font-family: georgia;
-			background-color: white;
+			background-color: black;
+			color: white;
+			border-color: white;
+			border: 3px;
 			border-radius: 10px;
 			width: 100%;
 			padding: 10px;
