--- a/video.html
+++ b/video.html
@@ -39,6 +39,13 @@
 		    margin-bottom: 20px;
 	    }
 
+             .vid{
+		     width: 960;
+		     height: 540;
+		     margin-auto;
+		     margin-top: 20px;
+	     }
+
         </style>
     </head>
     <body>
@@ -72,7 +79,7 @@
 		
 	</script>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/0b-nFSUXcuM?si=duhuA49RhkAfo0VO&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe class = "vid" src="https://www.youtube.com/embed/0b-nFSUXcuM?si=duhuA49RhkAfo0VO&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 	    
     </body>
