--- a/video.html
+++ b/video.html
@@ -39,13 +39,24 @@
 		    margin-bottom: 20px;
 	    }
 
-             .vid{
-		     display: block;
-		     width: 960;
-		     height: 540;
-		     margin-auto;
-		     margin-top: 20px;
-	     }
+            .container {
+		  position: relative;
+		  overflow: hidden;
+		  width: 80%;
+		  margin-auto;
+		  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+		}
+		
+		/* Then style the iframe to fit in the container div with full height and width */
+		.responsive-iframe {
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  bottom: 0;
+		  right: 0;
+		  width: 100%;
+		  height: 100%;
+		}
 
         </style>
     </head>
@@ -80,8 +91,10 @@
 		
 	</script>
 
-  <iframe class = "vid" src="https://www.youtube.com/embed/0b-nFSUXcuM?si=duhuA49RhkAfo0VO&amp;controls=0" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+<div class = "container">
+  <iframe class = "responsive-iframe" src="https://www.youtube.com/embed/0b-nFSUXcuM?si=duhuA49RhkAfo0VO&amp;controls=0" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
  <script>
         function content_of_tag(str,tag,start){
     		let start_index = str.indexOf("<" + tag + ">",start);
