--- a/video.html
+++ b/video.html
@@ -44,7 +44,7 @@
 		  position: relative;
 		  overflow: hidden;
 		  width: 80%;
-		  margin-auto;
+		  margin: auto;
 		  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 		}
 		
