--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','kent',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','t-shirt',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
