--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -27,7 +27,7 @@
 	<script src = "script_closed.js"></script>
         <div class = game>
 
-	<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld"; allow="fullscreen";></iframe>
+	<!--<iframe id="game-iframe" class = game src= "https://bolibompa-cdn.dojnaz.net/svt/spel/drakens-varld"; allow="fullscreen";></iframe>-->
         </div>
     </body>
 </html>
