--- a/header.html
+++ b/header.html
@@ -98,7 +98,7 @@
 	
 	<div class = left_div>
 		<a class = "navlink" href="/">HEM</a>
-		<a class = "navlink" href="/drakens-värld">DRAKENS VÄRLD</a>
+		<!--<a class = "navlink" href="/drakens-värld">DRAKENS VÄRLD</a>-->
 		<a class = "navlink" href="/hemliga-klubben-inlogg">HEMLIGT</a>
 	</div>
 
