--- a/artikel.html
+++ b/artikel.html
@@ -295,10 +295,10 @@
                 document.description = preamble;
             
                 buffer = `<div>
-                            <img src = ${bild} class = blogg_bild></img>
-			    <div class = foto>${fotograf}</div>
-			    <div class = titel>${titel}</div>
-                            <div class = ingress>${preamble}</div>
+                            <img src = ${bild} alt = "omslag för ${titel}" class = blogg_bild></img>
+			    <p class = foto>${fotograf}</p>
+			    <h class = titel>${titel}</h>
+                            <p class = ingress>${preamble}</p>
                         </div>
                     </div>`
            
