--- a/artikel.html
+++ b/artikel.html
@@ -297,7 +297,7 @@
                 buffer = `<div>
                             <img src = ${bild} alt = "omslag för ${titel}" class = blogg_bild></img>
 			    <p class = foto>${fotograf}</p>
-			    <h class = titel>${titel}</h>
+			    <h1 class = titel>${titel}</h1>
                             <p class = ingress>${preamble}</p>
                         </div>
                     </div>`
