--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 		.banner{
 			  background: black;
-			  background-image: url("bilder/ny_tavlor_komp.png");
+			  background-image: url("bilder/ny_tavlor_komp.webp");
 			  background-repeat: no-repeat;
 			  background-position: center center;
 			  background-attachment: fixed;
