--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main56'><script>draw_article_button('main56','oasen-kallebäck',isMobile)</script></div>
 			<div id = 'main55'><script>draw_article_button('main55','aladåbens-återkomst',isMobile)</script></div>
-			<div id = 'main54'><script>draw_article_button('main54','lockropets-anatomi',isMobile)</script></div>
-			<div id = 'main53'><script>draw_article_button('main53','t-shirt',isMobile)</script></div>					
+			<div id = 'main54'><script>draw_article_button('main54','lockropets-anatomi',isMobile)</script></div>								
 								
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-maj-25',isMobile)</script></div>
@@ -395,6 +395,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>
+			<div id = 'main53'><script>draw_article_button('main53','t-shirt',isMobile)</script></div>
 			<div id = 'main52'><script>draw_article_button('main52','hemsläp-2',isMobile)</script></div>
 			<div id = 'main51'><script>draw_article_button('main51','kent',isMobile)</script></div>	
 			<div id = 'main50'><script>draw_article_button('main50','regi-i-en-systemetkasse',isMobile)</script></div>
