--- a/video.html
+++ b/video.html
@@ -124,6 +124,8 @@
 		var beskrivning = content_of_tag(a_str,"beskrivning",0);
 		  
 		console.log(titel);
+		console.log(url);
+		console.log(beskrivning);
             
           });
 
