--- a/video.html
+++ b/video.html
@@ -43,7 +43,7 @@
 		  display: block;
 		  position: relative;
 		  overflow: hidden;
-		  width: 80%;
+		  width: clamp(10%,95%,800px);
 		  margin: auto;
 		  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 		}
