--- a/video.html
+++ b/video.html
@@ -43,9 +43,12 @@
 		  display: block;
 		  position: relative;
 		  overflow: hidden;
-		  width: clamp(10%,95%,800px);
-		  margin: auto;
-		  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+		  width: clamp(10px,80vw,800px);
+		  height: clamp(5px,45vw,450px)M
+		    margin: auto;
+		  
+		    
+		   /* padding-top: 56.25%;  16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 		}
 		
 		/* Then style the iframe to fit in the container div with full height and width */
