--- a/video.html
+++ b/video.html
@@ -126,6 +126,7 @@
 		var url = content_of_tag(a_str,"url",0);
 		var beskrivning = content_of_tag(a_str,"beskrivning",0);
 
+		document.title = titel;
 		document.getElementById("vs").src = url;
 		  
 		console.log(titel);
