--- a/video.html
+++ b/video.html
@@ -44,7 +44,7 @@
 		  position: relative;
 		  overflow: hidden;
 		  width: clamp(10px,80vw,800px);
-		  height: clamp(5px,45vw,450px)M
+		  height: clamp(5px,45vw,450px);
 		    margin: auto;
 		  
 		    
