--- a/video.html
+++ b/video.html
@@ -48,6 +48,7 @@
 		    font-family: "Times New Roman", Times, serif;
 		    font-size: 1.1em;
 		    color: white;
+		    margin-auto;
 		    margin-bottom: 20px;
 		    width: clamp(10px,20vw,300px);
 	    }
