--- a/video.html
+++ b/video.html
@@ -48,7 +48,7 @@
 		    font-family: "Times New Roman", Times, serif;
 		    font-size: 1.1em;
 		    color: white;
-		    margin-auto;
+		    margin: auto;
 		    margin-bottom: 20px;
 		    width: clamp(10px,80vw,300px);
 	    }
