--- a/video.html
+++ b/video.html
@@ -41,6 +41,8 @@
 		  color: white;
 		  text-align: center;
 		    margin-auto;
+		margin-top: 20px;
+		margin-bottom: 20px;
             }
 
 	    .intr{
@@ -50,7 +52,7 @@
 		    color: white;
 		    margin: auto;
 		    margin-bottom: 20px;
-		    width: clamp(10px,80vw,300px);
+		    width: clamp(10px,80vw,600px);
 	    }
 
             .container {
