--- a/video.html
+++ b/video.html
@@ -41,6 +41,7 @@
 		  color: white;
 		  text-align: center;
 		    margin-auto;
+		     width: clamp(10px,85vw,1000px);
 		margin-top: 20px;
 		margin-bottom: 20px;
             }
