--- a/video.html
+++ b/video.html
@@ -40,7 +40,7 @@
 		  line-height: 90%;
 		  color: white;
 		  text-align: center;
-		    margin-auto;
+		    margin: auto;
 		     width: clamp(10px,85vw,1000px);
 		margin-top: 20px;
 		margin-bottom: 20px;
