--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			<div id = 'blickfång1'><script>draw_article_button('blickfång1','inne-ute-jun-25',isMobile)</script></div>
-			<div id = 'blickfång2'><script>draw_article_button('blickfång2','vålnaden-kent',isMobile)</script></div>
+			<div id = 'blickfång2'><script>draw_article_button('blickfång2','kents-vålnad',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -365,7 +365,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			<div id = 'main57'><script>draw_article_button('main57','vålnaden-kent',isMobile)</script></div>
+			<div id = 'main57'><script>draw_article_button('main57','kents-vålnad',isMobile)</script></div>
 			<div id = 'main56'><script>draw_article_button('main56','oasen-kallebäck',isMobile)</script></div>
 			<div id = 'main55'><script>draw_article_button('main55','aladåbens-återkomst',isMobile)</script></div>							
 								
