--- a/index.html
+++ b/index.html
@@ -308,7 +308,6 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			<div id = 'blickfång1'><script>draw_article_button('blickfång1','inne-ute-jun-25',isMobile)</script></div>
-			<div id = 'blickfång2'><script>draw_article_button('blickfång2','kents-vålnad',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -365,9 +364,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main58'><script>draw_article_button('main58','bechdel',isMobile)</script></div>
 			<div id = 'main57'><script>draw_article_button('main57','kents-vålnad',isMobile)</script></div>
-			<div id = 'main56'><script>draw_article_button('main56','oasen-kallebäck',isMobile)</script></div>
-			<div id = 'main55'><script>draw_article_button('main55','aladåbens-återkomst',isMobile)</script></div>							
+			<div id = 'main56'><script>draw_article_button('main56','oasen-kallebäck',isMobile)</script></div>						
 								
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-jun-25',isMobile)</script></div>
@@ -396,6 +395,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>
+			<div id = 'main55'><script>draw_article_button('main55','aladåbens-återkomst',isMobile)</script></div>	
 			<div id = 'main54'><script>draw_article_button('main54','lockropets-anatomi',isMobile)</script></div>	
 			<div id = 'main53'><script>draw_article_button('main53','t-shirt',isMobile)</script></div>
 			<div id = 'main52'><script>draw_article_button('main52','hemsläp-2',isMobile)</script></div>
