--- a/index.html
+++ b/index.html
@@ -307,24 +307,24 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id="tarot"></div>
+			<!--<div id="isobel"></div>
 			<script>
-			var new_html = `<a href = "tarot">`
+			var new_html = `<a href = "video?=isobel">`
 			
 			new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
 			if(isMobile == false){
-				new_html += 	`<img src =  "https://i.imgur.com/RJpJTpc.png"
+				new_html += 	`<img src =  "https://i.imgur.com/9LNk93R.png"
 						style = "width: 100%; float: right;">
 						</img>`
 			}
 			else{
-				new_html += 	`<img src =  "https://i.imgur.com/k6yAj15.png"
+				new_html += 	`<img src =  "https://i.imgur.com/QIuvRL1.png"
 						style = "width: 100%; float: right; background: black;">
 						</img>`
 			}
 			new_html += "</a>"
-			document.getElementById("tarot").innerHTML = new_html;
-			</script>
+			document.getElementById("isobel").innerHTML = new_html;
+			</script>-->
 			
 			<div id = 'blickfång1'><script>draw_article_button('blickfång1','inne-ute-jun-25',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
