--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id="isobel"></div>
+			<!--<div id="isobel"></div>
 			<script>
 			var new_html = `<a href = "video?=isobel">`
 			
@@ -324,7 +324,7 @@
 			}
 			new_html += "</a>"
 			document.getElementById("isobel").innerHTML = new_html;
-			</script>
+			</script>-->
 			
 			<div id = 'blickfång1'><script>draw_article_button('blickfång1','inne-ute-jun-25',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
