--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	
-	<!--<script src = "script_closed.js"></script>-->
+	<script src = "script_closed.js"></script>
 
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
 	<div w3-include-html="header.html"></div>
