--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
-			<div id="tarot"></div>
+			<!--<div id="tarot"></div>
 			<script>
 			var new_html = `<a href = "tarot">`
 			
@@ -396,7 +396,7 @@
 			}
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
-			</script>
+			</script>-->
 			<div id = 'main57'><script>draw_article_button('main57','bechdel',isMobile)</script></div>
 			<div id = 'main56'><script>draw_article_button('main56','oasen-kallebäck',isMobile)</script></div>
 			<div id = 'main55'><script>draw_article_button('main55','aladåbens-återkomst',isMobile)</script></div>	
