--- a/index.html
+++ b/index.html
@@ -413,7 +413,8 @@
 			<div id = 'main44'><script>draw_article_button('main44','inne-ute-tidsmaskinen',isMobile)</script></div>
 			<div id = 'main43'><script>draw_article_button('main43','int-civilpolis',isMobile)</script></div>
 			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
-			
+
+			<a class = 'artikel_knapp' href='/archive'>ÄLDRE ARTIKLAR</a>
 		 </div>
 
 		<style>
