--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
 			<div id = 'main43'><script>draw_article_button('main43','int-civilpolis',isMobile)</script></div>
 			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
 
-			
+			<a class = 'artikel_knapp' style = "top-margin: 10px; bottom-margin: 20px;" href='/archive'>ÄLDRE ARTIKLAR</a>
 		 </div>
-		<a class = 'artikel_knapp' href='/archive'>ÄLDRE ARTIKLAR</a>
+		
 		
 		<style>
 		  .side_div{
