--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 			<div id = 'main43'><script>draw_article_button('main43','int-civilpolis',isMobile)</script></div>
 			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
 
-			<a class = 'artikel_knapp' style = "top-margin: 10px; bottom-margin: 20px;" href='/archive'>ÄLDRE ARTIKLAR</a>
+			<a class = 'artikel_knapp' style = "margin-top: 10px; margin-bottom: 20px;" href='/archive'>ÄLDRE ARTIKLAR</a>
 		 </div>
 		
 		
