--- a/index.html
+++ b/index.html
@@ -414,8 +414,10 @@
 			<div id = 'main43'><script>draw_article_button('main43','int-civilpolis',isMobile)</script></div>
 			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
 
-			<a class = 'artikel_knapp' style = "margin-top: 10px; margin-bottom: 20px;" href='/archive'>ÄLDRE ARTIKLAR</a>
-		 </div>
+			<div style = "margin-top: 10px; margin-bottom: 20px;">
+				<a class = 'artikel_knapp' href='/archive'>ÄLDRE ARTIKLAR</a>
+			</div>
+		</div>
 		
 		
 		<style>
